아이콘, 이름, 색 변경

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_moving"
         android:name="com.example.mylocationcalendar.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:label="@string/title_moving"
+        tools:layout="@layout/fragment_moving" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_medical"
         android:name="com.example.mylocationcalendar.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:label="@string/title_medical"
+        tools:layout="@layout/fragment_medical" />
 </navigation>
